--- a/hungry me/forget password.css
+++ b/hungry me/forget password.css
@@ -73,7 +73,9 @@ form {
 
 h1 {
     text-align: center;
-    color: #ffffff;
+    color: #0000009d;
+    font-weight: semi-bold;
+    margin-bottom: 40px;
 }
 
 .input-control {
@@ -133,7 +135,7 @@ button {
     width: 100%;
     padding: 10px;
     background-color: #3C6C41;
-    color: white;
+    color: rgba(255, 255, 255, 0.667);
     border: none;
     border-radius: 5px;
     font-size: 16px;
