--- a/hungry me/admin login.css
+++ b/hungry me/admin login.css
@@ -72,7 +72,9 @@ form {
 
 h1 {
     text-align: center;
-    color: #ffffff;
+    color: #0000009d;
+    margin-bottom: 40px;
+    font-weight: bold;
 }
 
 .input-control {
@@ -90,7 +92,7 @@ label {
     font-size: 1rem;
     border: 1px solid #D9D9D9;
     border-radius: 10px;
-    height: 50%;
+    height: 60%;
     background: transparent;
 }
 
@@ -158,7 +160,7 @@ button {
     width: 100%;
     padding: 10px;
     background-color: #3C6C41;
-    color: white;
+    color: rgba(255, 255, 255, 0.667);
     border: none;
     border-radius: 5px;
     font-size: 16px;
